web/modules/custom/it_route_trip_tools/assets/css/it-route-trip-tools.css
/* ... */
#outbound-large-screen-route-table table tbody tr th,
#outbound-small-screen-route-table table tbody tr th,
#inbound-large-screen-route-table table tbody tr th,
#inbound-small-screen-route-table table tbody tr th {
  position: sticky !important;
  width: 20%;
  left: 0;
  background: #003087;
  z-index: 1;
  color: #fff;
  position: relative;
}
#outbound-large-screen-route-table table tbody tr td,
#outbound-small-screen-route-table table tbody tr td,
#inbound-large-screen-route-table table tbody tr td,
#inbound-small-screen-route-table table tbody tr td {
  position: relative;
}
#outbound-large-screen-route-table table tbody tr td:hover:after,
#outbound-small-screen-route-table table tbody tr td:hover:after,
#inbound-large-screen-route-table table tbody tr td:hover:after,
#inbound-small-screen-route-table table tbody tr td:hover:after {
  content: "";
  position: absolute;
  background: #dedede !important;
  color: #fff !important;
  left: 0;
  top: -5000px;
  height: 5300px;
  width: 100%;
  z-index: -1;
}
.stop-control-buttons {
  position: relative !important;
}
.stop-table {
  width: 17%!important;
  float: left;
}
.stop-table th:after {
  font-family: "FontAwesome";
  content: '\f078';
  float: right;
  font-weight: 400;
}
.stop-table th[aria-expanded="true"]:after {
  font-family: "FontAwesome";
  content: '\f077';
  float: right;
  font-weight: 400;
}
.carousel {
  margin-top: 30px;
}
.carousel .carousel-controls {
  position: relative;
  min-height: 40px;
}
.carousel .carousel-controls button.left,
.carousel .carousel-controls button.right {
  top: 0;
  position: absolute;
}
.carousel .carousel-controls button.left .glyphicon:before,
.carousel .carousel-controls button.right .glyphicon:before {
  color: #000;
  position: relative;
  font-size: 30px;
}
.carousel .carousel-controls button.left .glyphicon.glyphicon-chevron-left,
.carousel .carousel-controls button.right .glyphicon.glyphicon-chevron-left,
.carousel .carousel-controls button.left .glyphicon.glyphicon-chevron-right,
.carousel .carousel-controls button.right .glyphicon.glyphicon-chevron-right {
  margin-top: 0;
  top: 0;
}
.carousel .carousel-controls button.left {
  left: 0;
}
.carousel .carousel-controls button.right {
  right: 0;
}
.carousel .carousel-controls .indicators {
  top: 60px;
  position: relative;
}
.carousel .carousel-controls .indicators ol li {
  background: #000;
}
@media only screen and (max-width: 991px) {
  #route-table-weekdays, #route-table-weekend {
    margin-top: 0;
  }
}

@media (max-width: 767px) {
  .routes-page-content-container #realtime-tab, .routes-page-content-container #schedule-tab {
    font-size: 20px !important;
  }
}

#inbound-large-screen-route-table table.table tbody tr.timepoint th:before,
#outbound-large-screen-route-table table.table tbody tr.timepoint th:before {
  content: '\f005';
  font-family: "FontAwesome";
  color: #fff;
  position: absolute;
  left: 0;
  font-weight: 700;
  font-size: 1.5rem;
  padding-top: 2px;
  padding-left: 2px;
  background-color: #80D80E;
  background-size: cover;
  height: 103%;
  margin-left: -2px;
  padding-left: 4px;
  width: 21px;
}
#inbound-large-screen-route-table table.table tbody tr.non-timepoint th:before,
#outbound-large-screen-route-table table.table tbody tr.non-timepoint th:before {
  content: '\f111';
  font-family: "FontAwesome";
  color: #fff;
  position: absolute;
  left: 0;
  font-weight: 700;
  font-size: 1.1rem;
  padding-top: 2px;
  background-color: #80D80E;
  background-size: cover;
  height: 103%;
  margin-left: -2px;
  padding-left: 5px;
  width: 21px;
}
#inbound-large-screen-route-table table.table tbody tr th,
#outbound-large-screen-route-table table.table tbody tr th {
  /*border-left: 35px solid #80D80E;*/
  padding-left: 35px !important;
}

